<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ParlezVousAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="form">Formulaire de connexion</string>
    <string name="nom">Nom d\'utilisateur</string>
    <string name="pass">Mot de passe</string>
    <string name="button_empty">Vider</string>
    <string name="button_validate">Envoyer</string>
    

</resources>
