<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFF0000"
    tools:context="com.example.parlezvousandroid.MainActivity$PlaceholderFragment" >



       <TextView
            android:background="#FF2ECC71"
            android:id="@+id/header"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textSize="20sp"
            android:text="@string/form" />
  

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/header"
        android:background="#FFFFFFFF" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nom" />

            <EditText
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text" 
                android:id="@+id/username_field"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pass" />

            <EditText
                
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="text"
                android:id="@+id/pass_field" />
            
            <TextView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Remplissez tous les champs !"
                android:textColor="#FF19B5FE"
                android:visibility="gone"
                android:id="@+id/warning"
                />
            
              <ProgressBar
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@android:style/Widget.ProgressBar.Large"
         android:layout_marginRight="50dp" 
         android:id="@+id/progress_bar"
         android:visibility="gone"
         />
            
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="#FF55FFF0"
        android:orientation="horizontal" >

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_empty"
            android:id="@+id/empty_button" />

        <Button
           
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_validate" 
            android:id="@+id/send_button"/>
    </LinearLayout>

</RelativeLayout>